Troubleshoots viewport issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ input[type="submit"] {
 body {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.4;
+  min-width: 100vh;
   width: 100%;
 }
 
